# MingCe

./: .env.example  .gitignore  README.md
engine/: .gitignore  PROJECT_SUMMARY.md  QLib+VNPY量化交易整合平台产品文档.md  auto_daily_report.py  backtest_portfolio.py  backtest_pro_strategies.py  byd_comprehensive_research.py  check_feishu_status.py  daily_strategy_monitor.py  daily_strategy_monitor_feishu.py  daily_strategy_trade_report.py  data_quality_guide.md  expert_review_results.md  expert_review_tasks.md  feishu_bot_listener.py  final_expert_review_report.md  fix_scheduler.py  generate_analysis_report.py  get_strategy_signals.py  improvement_report.md  integrated_daily_report.py  manage.py  manual_send_report.py  optimize_strategy_params.py  pyproject.toml  real_data_backtest.py  realtime_monitor.py  requirements.txt  restart.sh  run.py  run_auto_report.sh  run_bot_listener.sh  run_daily_report.sh  run_daily_trade_report.sh  run_integrated_report.sh  run_realtime_monitor.sh  run_signal_service.sh  run_strategy_evaluation.py  setup_autostart.sh  setup_cron.sh  (+24 more)
engine/.github/workflows/: ci.yml
engine/qlib_vnpy_platform/: __init__.py
engine/qlib_vnpy_platform/config/: __init__.py  settings.yaml  strategy_defaults.yaml
engine/qlib_vnpy_platform/core/: __init__.py  advanced_risk_manager.py  backtest.py  data_bridge.py  data_quality.py  data_quality_monitor.py  error_handler.py  exceptions.py  execution_optimizer.py  feishu_notifier.py  llm_analyzer.py  (+19 more)
engine/tests/: test_new_features_v2.py  test_strategy_backtest.py
engine/web_app_pkg/: __init__.py  helpers.py  routes.py
(+82 files in other folders)
