[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "makingmoney"
version = "2.0.0"
description = "QLib+VNPY 量化交易整合平台 — 全栈量化交易系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MakingMoney Contributors"},
]

dependencies = [
    "flask>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
ml = ["lightgbm>=3.3.0"]
data = ["akshare>=1.11.0", "yfinance>=0.2.0", "tushare>=1.2.0"]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
dev = ["black>=24.0.0", "ruff>=0.1.0"]

[tool.pytest.ini_options]
testpaths = ["qlib_vnpy_platform/tests", "tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: 需要网络连接的慢测试",
    "online: 需要数据源在线的测试",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
